--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=refinitiv-provider
 taq.serviceName=DIRECT_FEED
-taq.gzipFile=/Users/sgundam/Downloads/market_data/EQY_US_ARCA_IBF_1_20250102.gz
+taq.gzipFile=<<TAQ gzip-filename - csv data>>
